Completata prima sezione con bg e bottoni

--- a/index.html
+++ b/index.html
@@ -39,15 +39,22 @@
                     </ul>
                 </nav>
                 <div class="login">
-                    <a class="btn bg-white" href="#">Accedi</a>
+                    <a class="btn bg-white small-txt" href="#">Accedi</a>
                 </div>
             </div>
         </header>
         <!-- chiusura header -->
         <!-- apertura main -->
         <main>
-            <div class="row blue"> <!--Fila 1-->
-                <div class="box"></div>
+            <div class="row bg-img"> <!--Fila 1-->
+                <div class="box">
+                    <h1 class="white-txt">
+                        Il tuo posto per parlare
+                    </h1>
+                    <p class="white-txt">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, <br> o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, <br> Discord rende più facile chiaccherare ogni giorno e ritrovarsi più spesso</p>
+                    <a class="btn bg-black" href="#">&#129047; Scarica per Mac</a>
+                    <a href="#" class="btn bg-white"> Apri Discord nel tuo browser</a>
+                </div>
             </div>
 
             <div class="row"> <!--Fila 2-->
