Completata una sezione

--- a/index.html
+++ b/index.html
@@ -59,22 +59,35 @@
 
             <div class="row"> <!--Fila 2-->
                 <div class="box-container">
-                    <div class="blue-box"></div>
-                    <div class="pink-box"></div>
+                    <div class="img-box">
+                        <img src="img/item1.svg" alt="discord-chat">
+                    </div>
+                    <div class="text-box">
+                        <h2>
+                            Un luogo a invito <br>
+                            con tutto lo <br>
+                            spazio <br>
+                            necessario per <br>
+                            parlare
+                        </h2>
+                        <p>
+                            I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.
+                        </p>
+                    </div>
                 </div>
             </div>
 
             <div class="row lightgrey"> <!--Fila 3-->
                 <div class="box-container">
-                    <div class="pink-box"></div>
-                    <div class="blue-box"></div>
+                    <div class="text-box"></div>
+                    <div class="img-box"></div>
                 </div>
             </div>
 
             <div class="row"> <!--Fila 4-->
                 <div class="box-container">
-                    <div class="blue-box"></div>
-                    <div class="pink-box"></div>
+                    <div class="img-box"></div>
+                    <div class="text-box"></div>
                 </div>
             </div>
 
@@ -84,11 +97,11 @@
 
             <div class="row black"> <!--Fila 3-->
                 <div class="box-container">
-                    <div class="pink-box bottom"></div>
-                    <div class="blue-box bottom"></div>
-                    <div class="blue-box bottom"></div>
-                    <div class="blue-box bottom"></div>
-                    <div class="blue-box bottom"></div>
+                    <div class="text-box bottom"></div>
+                    <div class="img-box bottom"></div>
+                    <div class="img-box bottom"></div>
+                    <div class="img-box bottom"></div>
+                    <div class="img-box bottom"></div>
                 </div>
             </div>
         </main>
