completata seconda sezione e inserite waves

--- a/index.html
+++ b/index.html
@@ -76,17 +76,34 @@
                     </div>
                 </div>
             </div>
+            <div class="wave-container"></div>
 
             <div class="row lightgrey"> <!--Fila 3-->
                 <div class="box-container">
-                    <div class="text-box"></div>
-                    <div class="img-box"></div>
+                    <div class="text-box">
+                        <h2>
+                            Dove trovarsi è <br>
+                            facile
+                        </h2>
+                        <p>
+                            Mettiti comodo in un canale vocale quando <br>
+                            hai tempo. Gli amici nel tuo server <br>
+                            vedere che sei lì e unirsi istantaneamente <br>
+                            senza dover chiamare
+                        </p>
+                    </div>
+                    <div class="img-box">
+                        <img src="img/item2.svg" alt="discord-server">
+                    </div>
                 </div>
             </div>
+            <div class="wave-container bottom"></div>
 
             <div class="row"> <!--Fila 4-->
                 <div class="box-container">
-                    <div class="img-box"></div>
+                    <div class="img-box">
+
+                    </div>
                     <div class="text-box"></div>
                 </div>
             </div>
