completata terza sezione

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     </head>
-    <body class="debug">
+    <body>
         <!-- apertura header -->
         <header>
             <div class="hdr-container">
@@ -102,9 +102,21 @@
             <div class="row"> <!--Fila 4-->
                 <div class="box-container">
                     <div class="img-box">
-
+                        <img src="img/item3.svg" alt="discord-profile">
                     </div>
-                    <div class="text-box"></div>
+                    <div class="text-box">
+                        <h2>
+                            Da pochi a un <br> 
+                            fandom
+                        </h2>
+                        <p>
+                            Dai inizio a una community di qualsiasi <br>
+                            dimensione con strumenti di moderazione e <br>
+                            accesso ai membri personalizzabile. <br>
+                            Concedi ai membri poteri speciali, crea <br>
+                            canali privati, e molto altro.
+                        </p>
+                    </div>
                 </div>
             </div>
 
