completata ultima section

--- a/index.html
+++ b/index.html
@@ -120,8 +120,23 @@
                 </div>
             </div>
 
+            <div class="wave-container"></div>
+
             <div class="bigger-row lightgrey"> <!--Fila 5-->
-                <div class="greenbox"></div>
+                <div class="bigger-box txt-align-cntr">
+                    <h2>
+                        Tecnologia affidabile per tenersi in contatto
+                    </h2>
+                    <p>
+                        Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda <br>
+                        gli amici giocare in straming, o riunitevi in una sessione di disegno con la condivisione schermo.
+                    </p>
+                    <img src="img/item4-big.svg" alt="discord-videocall">
+                    <div class="download">
+                        <h3>Pronto ad iniziare la tua avventura?</h3>
+                        <a class="btn bg-blue" href="#">&#129047; Scarica per Mac </a>
+                    </div>
+                </div>
             </div>
 
             <div class="row black"> <!--Fila 3-->
