ristrutturato footer e inseriti elementi nella prima colonna

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Discord</title>
+        <!-- css -->
         <link rel="stylesheet" href="css/style.css">
+        <!-- GOOGLE FONTS -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+        <!-- FONT AWESOME -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
         <!-- apertura header -->
@@ -97,7 +101,7 @@
                     </div>
                 </div>
             </div>
-            <div class="wave-container bottom"></div>
+            <div class="wave-container flipped"></div>
 
             <div class="row"> <!--Fila 4-->
                 <div class="box-container">
@@ -139,23 +143,48 @@
                 </div>
             </div>
 
-            <div class="row black"> <!--Fila 3-->
-                <div class="box-container">
-                    <div class="text-box bottom"></div>
-                    <div class="img-box bottom"></div>
-                    <div class="img-box bottom"></div>
-                    <div class="img-box bottom"></div>
-                    <div class="img-box bottom"></div>
-                </div>
-            </div>
         </main>
         <!-- chiusura main -->
         <!-- apertura footer -->
         <footer class="black">
-            <div class="footer-container">
+            <div class="ftr-container-top">
+                <div class="column2-5">
+                    <h2 class="blue">
+                        Il tuo posto per <br> parlare
+                    </h2>
+                    <div class="language">
+                        <img src="img/ita.png" alt="italy-flag">
+                        <div class="white-txt">Italiano &#5167;</div>
+                    </div>
+                    <div class="social-logos">
+                        <a class="white-txt" href="https://twitter.com/discord">
+                            <i class="fa-brands fa-x-twitter"></i>
+                        </a>
+                        <a class="white-txt" href="https://www.instagram.com/discord/">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a class="white-txt" href="https://www.facebook.com/discord">
+                            <i class="fa-brands fa-square-facebook"></i>
+                        </a>
+                        <a class="white-txt" href="https://www.youtube.com/@discord">
+                            <i class="fa-brands fa-youtube"></i>  
+                        </a>
+                    </div> 
+                </div>
+                <div class="column3-5">
+                    <div class="column1-4">a</div>
+                    <div class="column1-4">a</div>
+                    <div class="column1-4">a</div>
+                    <div class="column1-4">a</div>
+                </div>
+            </div>
+            <hr>
+            
+
+            <div class="ftr-container-bottom">
+                
                 <div class="logo">LOGO</div>
                 <button>BOTTONE</button>
-
             </div>
         </footer>
         <!-- chiusura footer -->
