aggiunto attributo _blank ai link ai social

--- a/index.html
+++ b/index.html
@@ -157,16 +157,16 @@
                         <div class="white-txt">Italiano &#5167;</div>
                     </div>
                     <div class="social-logos">
-                        <a class="white-txt" href="https://twitter.com/discord">
+                        <a class="white-txt" href="https://twitter.com/discord" target="_blank">
                             <i class="fa-brands fa-x-twitter"></i>
                         </a>
-                        <a class="white-txt" href="https://www.instagram.com/discord/">
+                        <a class="white-txt" href="https://www.instagram.com/discord/" target="_blank">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
-                        <a class="white-txt" href="https://www.facebook.com/discord">
+                        <a class="white-txt" href="https://www.facebook.com/discord" target="_blank">
                             <i class="fa-brands fa-square-facebook"></i>
                         </a>
-                        <a class="white-txt" href="https://www.youtube.com/@discord">
+                        <a class="white-txt" href="https://www.youtube.com/@discord" target="_blank">
                             <i class="fa-brands fa-youtube"></i>  
                         </a>
                     </div> 
